css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    box-sizing: border-box;
    padding:0
    margin:0;
    max-width: 100%;
    
}
body {
    line-height: 2;
}

section {
    padding: 4% 0;
}
nav {
	display:flex;

    
}
.logo {
    margin: auto;
    
}
.links {
    width:70%;
	display:flex;
    justify-content: space-evenly;
    padding: 25px;

}
.box {
    display: flex;
    align-items: center;
    justify-content: center;

}
.box img {
    width:83%;
  }
html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 2;
}

.container {
    width: 90%;
    margin: 0 auto;
}

.top-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    border-bottom: 1px dashed black;
}

.top-content .text-container {
    width: 500px;
    text-align:left;
	line-height: 2; 
}

.middle-content {
    margin-bottom: 5px;
    border-bottom: 1px dashed black;
    width:92%;
    margin: 0 auto;
}

.middle-content h2 {
    padding: 0 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.middle-content .boxes .box1 {
    width: 12.5%;
    height: 100px;
    background: teal;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.middle-content .boxes .box2 {
    width: 12.5%;
    height: 100px;
    background: gold;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.middle-content .boxes .box3 {
    width: 12.5%;
    height: 100px;
    background: cadetblue;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.middle-content .boxes .box3 {
    width: 12.5%;
    height: 100px;
    background: black;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.middle-content .boxes .box4 {
    width: 12.5%;
    height: 100px;
    background: coral;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.middle-content .boxes .box5 {
    width: 12.5%;
    height: 100px;
    background: crimson;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.middle-content .boxes .box6 {
    width: 12.5%;
    height: 100px;
    background: forestgreen;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.middle-content .boxes .box7 {
    width: 12.5%;
    height: 100px;
    background: darkorchid;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.middle-content .boxes .box8 {
    width: 12.5%;
    height: 100px;
    background: hotpink;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.middle-content .boxes .box9 {
    width: 12.5%;
    height: 100px;
    background: indigo;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.middle-content .boxes .box10 {
    width: 12.5%;
    height: 100px;
    background: dodgerblue;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.bottom-content {
    display: flex;
    justify-content: space-around;
    width:90%;
    margin: 0 auto;
}

.bottom-content .text-container {
    height:150px;
    width: 350px;
    text-align:left;
	line-height: 2;
}


footer {
    background: black;
    display:flex;
    align-content: flex-start;
    margin: 0 1%;
}
.homeFooter { 
    width:100%;
    display:flex;
    justify-content: space-evenly;
    padding: 25px;

}
footer nav {
    width: 85%;
    font-size: 14px;
    
}

footer nav a {
    color: white;
    text-decoration: none;
    text-align: left;
}

/*START ABOUT.HTML STYLING*/
* {
    box-sizing: border-box;
    padding:0;
    margin:0;

}
body {
    max-width: 100%;
}

header nav {
	display:flex;
    justify-content:center;
    padding: 3% 0;
	
}
.links2 {
	width:80%;
	display:flex;
    justify-content:space-evenly;
    margin:auto;
}
nav a{
	color: black;
	text-decoration: none;
  }

  }
.container2{
    display:flex;
    width: 80%;
    margin: 0 auto;
    font-size: 20px;
    border-bottom: 1px dashed black;
}
.middle2{
    display:flex;
    padding: 10px 5%;
   

}
.bottom2{
    display:flex;
    padding: 10px 5%;
}

.container3 {
    display:flex;
    flex-direction: column;
    justify-content: space-around;
    width:40%;
    padding: 2px 1%;
    border-bottom:1px dashed black;
}

.letswork {
    display:flex;
    width: 80%;
    margin: 0 auto;
    font-size: 20px;
}

h4 {
    border-radius:25px;
    border:1px solid black;
    text-align: center;
    padding:7px;
    width: 150px;
    height: 50px;
}

